--- a/frontend/translations/bn.po
+++ b/frontend/translations/bn.po
@@ -2,34 +2,14 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2022-12-03 14:47+0000\n"
 "Last-Translator: Salman Hossain Saif <penpot.weblate@inbx.anonaddy.com>\n"
-"Language-Team: Bengali <https://hosted.weblate.org/projects/penpot/frontend/"
-"bn/>\n"
+"Language-Team: Bengali "
+"<https://hosted.weblate.org/projects/penpot/frontend/bn/>\n"
 "Language: bn\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Generator: Weblate 4.15-dev\n"
-
-#: src/app/main/ui/auth/register.cljs, src/app/main/ui/auth/login.cljs
-msgid "auth.create-demo-account"
-msgstr "ডেমো অ্যাকাউন্ট তৈরী করুন"
-
-#: src/app/main/ui/auth/register.cljs, src/app/main/ui/auth/recovery_request.cljs, src/app/main/ui/auth/login.cljs
-msgid "auth.email"
-msgstr "ইমেইল"
-
-#: src/app/main/ui/auth/login.cljs
-msgid "auth.login-submit"
-msgstr "লগিন"
-
-#: src/app/main/ui/auth/login.cljs
-msgid "auth.login-with-gitlab-submit"
-msgstr "গিটল্যাব"
-
-#: src/app/main/ui/auth/login.cljs
-msgid "auth.login-with-ldap-submit"
-msgstr "LDAP"
 
 #: src/app/main/ui/auth/register.cljs
 msgid "auth.already-have-account"
@@ -45,9 +25,9 @@ msgstr ""
 msgid "auth.confirm-password"
 msgstr "পাসওয়ার্ড নিশ্চিত করুন"
 
-#: src/app/main/ui/auth/login.cljs
-msgid "auth.login-with-google-submit"
-msgstr "গুগল"
+#: src/app/main/ui/auth/register.cljs, src/app/main/ui/auth/login.cljs
+msgid "auth.create-demo-account"
+msgstr "ডেমো অ্যাকাউন্ট তৈরী করুন"
 
 #: src/app/main/ui/auth/register.cljs
 msgid "auth.demo-warning"
@@ -55,13 +35,9 @@ msgstr ""
 "এটি একটি ডেমো সার্ভিস। প্রয়োজনীয় কোনো কাজে ব্যবহার করবেন না। কিছু সময় পর "
 "প্রজেক্টগুলো মুছে ফেলা হবে।"
 
-#: src/app/main/ui/auth/login.cljs
-msgid "auth.login-with-oidc-submit"
-msgstr "ওপেনআইডি"
-
-#: src/app/main/ui/auth/recovery.cljs
-msgid "auth.notifications.invalid-token-error"
-msgstr "রিকভারি টোকেন সঠিক নয়।"
+#: src/app/main/ui/auth/register.cljs, src/app/main/ui/auth/recovery_request.cljs, src/app/main/ui/auth/login.cljs
+msgid "auth.email"
+msgstr "ইমেইল"
 
 #: src/app/main/ui/auth/login.cljs
 msgid "auth.forgot-password"
@@ -76,12 +52,32 @@ msgid "auth.login-here"
 msgstr "এখানে লগিন করুন"
 
 #: src/app/main/ui/auth/login.cljs
+msgid "auth.login-submit"
+msgstr "লগিন"
+
+#: src/app/main/ui/auth/login.cljs
 msgid "auth.login-title"
 msgstr "আপনাকে আবার দেখে ভালো লাগছে!"
 
 #: src/app/main/ui/auth/login.cljs
 msgid "auth.login-with-github-submit"
 msgstr "গিটহাব"
+
+#: src/app/main/ui/auth/login.cljs
+msgid "auth.login-with-gitlab-submit"
+msgstr "গিটল্যাব"
+
+#: src/app/main/ui/auth/login.cljs
+msgid "auth.login-with-google-submit"
+msgstr "গুগল"
+
+#: src/app/main/ui/auth/login.cljs
+msgid "auth.login-with-ldap-submit"
+msgstr "LDAP"
+
+#: src/app/main/ui/auth/login.cljs
+msgid "auth.login-with-oidc-submit"
+msgstr "ওপেনআইডি"
 
 #: src/app/main/ui/auth/recovery.cljs
 msgid "auth.new-password"
@@ -90,3 +86,7 @@ msgstr "নতুন পাসওয়ার্ড টাইপ করুন"
 #: src/app/main/ui/auth/register.cljs
 msgid "auth.newsletter-subscription"
 msgstr "আমি Penpot মেইলিং লিষ্টে সাবস্ক্রাইব করতে সম্মত।"
+
+#: src/app/main/ui/auth/recovery.cljs
+msgid "auth.notifications.invalid-token-error"
+msgstr "রিকভারি টোকেন সঠিক নয়।"
