--- a/frontend/translations/jpn_JP.po
+++ b/frontend/translations/jpn_JP.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2022-11-01 14:29+0000\n"
 "Last-Translator: Tatsuto Yamamoto <me@laminne33569.net>\n"
-"Language-Team: Japanese <https://hosted.weblate.org/projects/penpot/frontend/"
-"jpn_JP/>\n"
+"Language-Team: Japanese "
+"<https://hosted.weblate.org/projects/penpot/frontend/jpn_JP/>\n"
 "Language: jpn_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -165,6 +165,9 @@ msgstr "サービスに登録するには、利用規約とプライバシーポ
 msgid "auth.verification-email-sent"
 msgstr "認証メールを送信しました"
 
+msgid "common.publish"
+msgstr "公開"
+
 msgid "common.share-link.all-users"
 msgstr "すべてのPenpotユーザー"
 
@@ -216,6 +219,17 @@ msgstr "プロトタイプを共有"
 
 msgid "common.share-link.view-all"
 msgstr "すべて選択"
+
+msgid "common.unpublish"
+msgstr "非公開"
+
+#: src/app/main/ui/dashboard/projects.cljs
+msgid "dasboard.team-hero.management"
+msgstr "チームを管理"
+
+#: src/app/main/ui/dashboard/projects.cljs
+msgid "dasboard.tutorial-hero.start"
+msgstr "チュートリアルを始める"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "dashboard.add-shared"
@@ -997,17 +1011,3 @@ msgstr "招待を再送"
 #: src/app/main/ui/static.cljs, src/app/main/ui/static.cljs, src/app/main/ui/static.cljs
 msgid "labels.retry"
 msgstr "リトライ"
-
-msgid "common.unpublish"
-msgstr "非公開"
-
-msgid "common.publish"
-msgstr "公開"
-
-#: src/app/main/ui/dashboard/projects.cljs
-msgid "dasboard.team-hero.management"
-msgstr "チームを管理"
-
-#: src/app/main/ui/dashboard/projects.cljs
-msgid "dasboard.tutorial-hero.start"
-msgstr "チュートリアルを始める"
