--- a/frontend/translations/zh_CN.po
+++ b/frontend/translations/zh_CN.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2022-11-29 14:48+0000\n"
 "Last-Translator: Dário <dariogomes@gmail.com>\n"
-"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
-"penpot/frontend/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified) "
+"<https://hosted.weblate.org/projects/penpot/frontend/zh_Hans/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -698,6 +698,12 @@ msgstr "没有配置身份认证服务源."
 msgid "errors.auth.unable-to-login"
 msgstr "你似乎还没有登录或会话已过期。"
 
+msgid "errors.bad-font"
+msgstr "无法加载%s字体"
+
+msgid "errors.bad-font-plural"
+msgstr "无法加载%s等字体"
+
 #: src/app/main/data/workspace.cljs
 msgid "errors.clipboard-not-implemented"
 msgstr "你的浏览器不支持该操作"
@@ -780,6 +786,9 @@ msgstr "确认密码必须保持一致"
 #: src/app/main/ui/settings/password.cljs
 msgid "errors.password-too-short"
 msgstr "密码最少需要8位字符"
+
+msgid "errors.profile-blocked"
+msgstr "个人资料已被屏蔽"
 
 #: src/app/main/ui/auth/recovery_request.cljs, src/app/main/ui/settings/change_email.cljs, src/app/main/ui/dashboard/team.cljs
 msgid "errors.profile-is-muted"
@@ -868,6 +877,9 @@ msgstr "Twtter支持帐号"
 #: src/app/main/ui/settings/password.cljs
 msgid "generic.error"
 msgstr "发生了一个错误"
+
+msgid "history.alert-message"
+msgstr "你正在查看%s版本"
 
 #: src/app/main/ui/inspect/attributes/blur.cljs
 msgid "inspect.attributes.blur"
@@ -1082,9 +1094,6 @@ msgstr "文本"
 #: src/app/main/ui/inspect/right_sidebar.cljs
 msgid "inspect.tabs.info"
 msgstr "信息"
-
-msgid "history.alert-message"
-msgstr "你正在查看%s版本"
 
 #: src/app/main/ui/workspace/header.cljs
 msgid "label.shortcuts"
@@ -1891,6 +1900,21 @@ msgstr "视频教程"
 msgid "onboarding-v2.before-start.title"
 msgstr "在开始之前"
 
+msgid "onboarding-v2.newsletter.desc"
+msgstr "订阅Penpot通知邮件，跟进产品开发进度，获取最新消息。"
+
+msgid "onboarding-v2.newsletter.news"
+msgstr "发给我有关Penpot的新闻（博客文章、视频教程、直播等）。"
+
+msgid "onboarding-v2.newsletter.privacy1"
+msgstr "我们关心隐私，您可在此阅读我们的 "
+
+msgid "onboarding-v2.newsletter.privacy2"
+msgstr "我们将仅发送与您有关的邮件，您可以随时在其中任意一封邮件中点击取消订阅。"
+
+msgid "onboarding-v2.newsletter.updates"
+msgstr "向我发送一些产品更新（新功能，新版本，新修复等）。"
+
 msgid "onboarding-v2.welcome.desc1"
 msgstr "Penpot是由Kaleidos及社区共同开发的开源软件，许多人已经在社区中互相帮助。每个人都可以通过以下方式进行协作："
 
@@ -2421,6 +2445,9 @@ msgstr "切换调色板"
 msgid "shortcuts.toggle-focus-mode"
 msgstr "切换焦点模式"
 
+msgid "shortcuts.toggle-fullscreen"
+msgstr "切换全屏"
+
 msgid "shortcuts.toggle-grid"
 msgstr "显示/隐藏网格"
 
@@ -2456,9 +2483,6 @@ msgstr "切换可见度"
 
 msgid "shortcuts.toggle-zoom-style"
 msgstr "切换缩放样式"
-
-msgid "shortcuts.toggle-fullscreen"
-msgstr "切换全屏"
 
 msgid "shortcuts.undo"
 msgstr "回退"
@@ -3639,6 +3663,10 @@ msgid "workspace.options.layout.no-wrap"
 msgstr "不换行"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
+msgid "workspace.options.layout.packed"
+msgstr "收起"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
 msgid "workspace.options.layout.padding"
 msgstr "内边距"
 
@@ -4140,6 +4168,10 @@ msgid "workspace.shape.menu.show"
 msgstr "显示"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs
+msgid "workspace.shape.menu.show-in-assets"
+msgstr "在素材面板中显示"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs
 msgid "workspace.shape.menu.show-main"
 msgstr "显示主组件"
 
@@ -4174,6 +4206,12 @@ msgstr "更新主要组件"
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs, src/app/main/ui/workspace/context_menu.cljs
 msgid "workspace.shape.menu.update-main"
 msgstr "更新主组件"
+
+msgid "workspace.sidebar.collapse"
+msgstr "收起侧边栏"
+
+msgid "workspace.sidebar.expand"
+msgstr "展开侧边栏"
 
 #: src/app/main/ui/workspace/left_toolbar.cljs
 msgid "workspace.sidebar.history"
@@ -4400,41 +4438,3 @@ msgstr "更新"
 
 msgid "workspace.viewport.click-to-close-path"
 msgstr "单击以闭合路径"
-
-msgid "errors.bad-font"
-msgstr "无法加载%s字体"
-
-msgid "errors.bad-font-plural"
-msgstr "无法加载%s等字体"
-
-msgid "onboarding-v2.newsletter.news"
-msgstr "发给我有关Penpot的新闻（博客文章、视频教程、直播等）。"
-
-msgid "errors.profile-blocked"
-msgstr "个人资料已被屏蔽"
-
-msgid "onboarding-v2.newsletter.desc"
-msgstr "订阅Penpot通知邮件，跟进产品开发进度，获取最新消息。"
-
-msgid "workspace.sidebar.collapse"
-msgstr "收起侧边栏"
-
-msgid "onboarding-v2.newsletter.privacy1"
-msgstr "我们关心隐私，您可在此阅读我们的 "
-
-msgid "onboarding-v2.newsletter.privacy2"
-msgstr "我们将仅发送与您有关的邮件，您可以随时在其中任意一封邮件中点击取消订阅。"
-
-msgid "onboarding-v2.newsletter.updates"
-msgstr "向我发送一些产品更新（新功能，新版本，新修复等）。"
-
-msgid "workspace.sidebar.expand"
-msgstr "展开侧边栏"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs
-msgid "workspace.shape.menu.show-in-assets"
-msgstr "在素材面板中显示"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.packed"
-msgstr "收起"
